# Weed-Spotter

./: .gitignore  CMakeLists.txt  Weed-Spotter  compile.sh  start-working.sh
dataset/: labels.csv
dataset/photos/: labels.csv  photo_177.jpg.VDV0B3  photo_179.jpg.SGB0B3  photo_234.jpg.NH4QC3
res/: kernelBiases.json  kernelWeights.json  mlpBiases.json  stats.json
src/: cameraaccess.cpp  cameraaccess.hpp  cameraimage.cpp  cameraimage.hpp  globals.hpp  httpserver.cpp  httpserver.hpp  httpsserver.cpp  httpsserver.hpp  main.cpp  picoi2c.cpp  picoi2c.hpp  pump.cpp  pump.hpp  streamer.cpp  streamer.hpp
src/cnn/: cnn.cpp  cnn.hpp  cnnutils.cpp  cnnutils.hpp  tensor.cpp  tensor.hpp  timer.hpp
